<resources>
    <string name="app_name">Шумомер</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Автомобильный шумомер</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="message_alert_delete_note">Удалить заметку?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="enable_GPS_for_use_app">Включить GPS для использования приложение</string>
    <string name="enable_GPS">Включить GPS</string>

    <string name="not_permission">Нет разрешения</string>
    <string name="use_mph">использовать mph</string>
    <string name="unit_of_measure">Единицы измерения</string>
    <string name="speedometer">Спидометр</string>
    <string name="auto_run_speedometer">Включать при запуске приложения</string>
    <string name="btn_save_note">Ок</string>
    <string name="btn_delete_note">Удалить</string>
    <string name="list_is_empty">Нет заметок</string>

    <string name="write_name_track">Название записи</string>


    <string name="button_cancel">Отмена</string>
    <string name="button_close">Закрыть</string>
    <string name="toast_input_name_track">Введите имя записи</string>
    <string name="toast_stop_write_track">Остановите запись трека</string>
    <string name="toast_not_wrote_track">Нет записанного трека</string>

    <string name="alert_name_is_empty">Имя не может быть пустым</string>
    <string name="alert_name_is_exist">Такое имя уже существует</string>


    <string name="dialog_message_choose_save">Выберите сохранение:</string>
    <string name="not_run_speed">Не запущен спидометр</string>
    <string name="not_run_sound_meter">Не запущен шумомер</string>


    <string name="mph">mph</string>
    <string name="kmh">км/час</string>
    <string name="db">дБ</string>
    <string name="zero">0</string>
    <string name="name">Название</string>
    <string name="content">Содержание</string>

    <string name="content_note">Содержание заметки</string>
    <string name="name_note">Имя заметки</string>
    <string name="name_save">Имя трека</string>


    <string name="track_wrote">Трек записан</string>
    <string name="go_to_graph">посмотреть на графике</string>
    <string name="save_track">сохранить трэк</string>
    <string name="close">закрыть</string>


    <string name="menu_sound_meter">Шумомер</string>
    <string name="double_click">Нажмите ещё раз для выхода</string>
    <string name="menu_statistics">Графики</string>
    <string name="menu_about_app">О приложении</string>
    <string name="menu_notes">Заметки</string>
    <string name="title_note">Заметка</string>
    <string name="button_start_track">Начать запись</string>
    <string name="button_go_to_graph">К графику</string>
    <string name="button_stop_track">Остановить запись</string>
    <string name="button_open_save_track">Открыть</string>
    <string name="text_for_not_work_speedometer">Спидометр не запущен</string>
    <string name="text_for_not_work_soundmeter">Шумомер не запущен</string>
    <string name="button_start_speedometer">Запустить спидометр</string>
    <string name="button_stop_speedometer">Спидометр запущен</string>
    <string name="sound">Шум</string>
    <string name="speed">Скорость</string>
    <string name="button_save">Сохранить</string>
    <string name="button_play">Старт</string>
    <string name="button_pause">Пауза</string>
    <string name="button_clean">Очистить</string>
    <string name="title_time">время</string>

</resources>
