<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sound_meter"
            android:icon="@drawable/ic_speedometer_140"
            android:title="@string/menu_sound_meter" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_graph_140"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes_150"
            android:title="@string/menu_notes" />

        <item
            android:id="@+id/nav_about_app"
            android:icon="@drawable/ic_notes_150"
            android:title="@string/menu_about_app" />

    </group>


</menu>
