<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_sound_meter">

    <fragment
        android:id="@+id/nav_sound_meter"
        android:name="com.example.soundlevelmeter.ui.soundmeter.SoundMeterFragment"
        android:label="@string/menu_sound_meter"
        tools:layout="@layout/fragment_sound_meter" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.soundlevelmeter.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.soundlevelmeter.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes">
        <action
            android:id="@+id/action_nav_settings_to_fragment_note"
            app:destination="@id/fragment_note" />
    </fragment>

    <fragment
        android:id="@+id/fragment_note"
        android:name="com.example.soundlevelmeter.ui.notes.NoteContentFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_content_note" />


</navigation>