<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_layout">

    <TextView
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_is_delete"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/write_name_track">

    </TextView>

    <EditText
        android:id="@+id/edit_text_name_save"
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_is_delete"
        android:inputType="text"

        ></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:layout_below="@+id/edit_text_name_save"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel_save_track"
            android:text="@string/button_cancel"
            android:layout_marginEnd="50dp">


        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save_track"
            android:text="@string/button_save">


        </Button>


    </LinearLayout>


</RelativeLayout>